# oscope2100

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md
src/: dsoextractfw.c  oscope2100_common.h  oscope2100_usb.cpp
udev/: dso2100.rules.in
